--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,19 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
+    <section>
+        <div class="capa">
+            <img class="img-fluid img" src="img/capa4.jpg">
+        </div>
+    </section>
+        <div class="container">
+           
+            <div id="menu">
+                <a href="index.html">Home</a>
+                <a href="gatos.html">Fotos</a>
+                <a href="contato.html">Contato</a>
+            </div>
+        </div>
     <h1>Conta sobre seu gatinho para nós!</h1>
     <title>Contato</title>
     <section class="mb-5" id="contato">
